main --AT-- image resize (actually the whole section) on small heights solved

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -99,7 +99,7 @@ a
 .photo-block
     width: 22rem
     height: 30rem
-    position: absolute
+    position: relative
     +nonStaticHcentering(11rem)
     overflow: hidden
     margin-top: 4rem
@@ -192,7 +192,7 @@ a
 /* =============================== Relative =============================== */
 .header
     &
-        height: 100vh
+        height: fit-content
         padding-top: 7rem
         overflow: hidden
     &__tank
